--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,14 +27,17 @@ dependencies {
 
     // Firebase
 
-    implementation 'com.google.firebase:firebase-auth:16.0.3'
-    implementation 'com.google.firebase:firebase-database:16.0.1'
-    implementation 'com.google.firebase:firebase-storage:16.0.1'
-    implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.google.firebase:firebase-auth:11.8.0'
+    implementation 'com.google.firebase:firebase-database:11.8.0'
+    implementation 'com.google.firebase:firebase-storage:11.8.0'
+    implementation 'com.google.firebase:firebase-core:11.8.0'
 
     // circular image
 
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+
+    // image cropper
+    api 'com.theartofdev.edmodo:android-image-cropper:2.6.+'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
