--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddNewPost"></activity>
+        <activity android:name=".AddNewPost" android:parentActivityName=".MainActivity"></activity>
         <activity android:name=".SetupActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
